[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/Sentry.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Props/Turret 1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Props/Turret 2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Props/Turret 3.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Objects/Turret.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4.5, 4 )

[node name="Sentry" type="StaticBody2D" index="0"]

position = Vector2( 80, 104 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
active = true
shot_interval = 2
shot_speed = 60
shot_damage = 1
expiry_time = 2

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.5, 8 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SoundShoot" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimerShoot" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]


